# kevin

./: .gitignore  Dockerfile  README.md
kevins_backend/: pyproject.toml
kevins_backend/kevins_backend/: __main__.py
kevins_frontend/: package.json
