[tool.poetry]
name = "kevins_backend"
version = "0.0.0"
description = ""
authors = ["Jake King <jake.a.king778@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
